# ClarityForge

./: .eslintrc.js  .gitignore  README.md  package.json  tsconfig.json  turbo.json
.agents_tmp/: PLAN.md
.github/workflows/: ci.yml
apps/api/: pyproject.toml
apps/api/src/: config.py  main.py
apps/api/src/api/v1/: __init__.py
apps/api/src/api/v1/endpoints/: auth.py  export.py  health.py  reasoning.py  sessions.py  simulation.py
apps/api/src/auth/: service.py
apps/api/src/db/: database.py
apps/api/src/middleware/: cache.py  error_handler.py  logging.py  rate_limit.py  security.py
apps/api/src/monitoring/: __init__.py  health.py  metrics.py
apps/api/src/services/ai/: providers.py
apps/api/src/services/bias/: taxonomy.py
apps/api/src/services/export/: generator.py
apps/api/src/services/reasoning/: pipeline.py
apps/api/src/services/simulation/: engine.py
apps/web/: package.json  pnpm-lock.yaml
apps/web/src/app/: page.tsx
apps/web/src/components/reasoning/: ReasoningWorkspace.tsx  Toolbar.tsx  index.ts
apps/web/src/components/reasoning/nodes/: AlternativeNode.tsx  AssumptionNode.tsx  BiasNode.tsx  ConclusionNode.tsx  EvidenceNode.tsx  InputNode.tsx  QuestionNode.tsx
